--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
     "babel-plugin-lodash": "^3.2.11",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "chart.js": "^2.6.0",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "file-loader": "^0.11.1",
     "node-sass": "^4.5.2",
+    "react-chartjs-2": "^2.1.0",
+    "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
